fixes video light alignment

--- a/client/scss/app.scss
+++ b/client/scss/app.scss
@@ -295,8 +295,8 @@ code {
   width: 5px;
   height: 5px;
   border-radius: 100%;
-  top: -25px;
-  left: 39px;
+  top: -26px;
+  left: 36px;
 }
 
 ///////////////////////////////////
